--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
         "sourceMap": true,
         "outDir": "lib",
         "strict": true,
-        "noImplicitAny": true,
-        "noImplicitThis": true,
+        "noImplicitAny": false,
+        "noImplicitThis": false,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
         "strictNullChecks": true,
