--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prettier": "prettier --write src/*.ts src/**/*.ts *.json",
         "prepublishOnly": "rm -f *~ && npm run nearley && tsc",
         "test": "tsc && nyc mocha -r ts-node/register src/**/test/*.ts",
-        "coveralls": "nyc report --reporter=text-lconv | coveralls"
+        "coveralls": "nyc report --reporter=text-lcov | coveralls"
     },
     "author": "Calculemus LLC",
     "license": "ISC",
@@ -28,7 +28,6 @@
         "@types/nearley": "^2.11.0",
         "@types/node": "^9.4.7",
         "chai": "^4.1.2",
-        "chai-immutable": "^1.6.0",
         "coveralls": "^3.0.0",
         "mocha": "^5.0.4",
         "mocha-lcov-reporter": "^1.3.0",
