Move .d.ts file into a subdirectory to deal with nyc (or mocha?) not liking being fed a .d.ts file

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     },
     "nyc": {
         "include": ["src/**/*.ts"],
-        "exclude": ["src/**/test/*.ts"],
+        "exclude": ["src/**/*.d.ts", "src/**/test/**/*.ts"],
         "extension": [".ts"],
         "require": ["ts-node/register"],
         "sourcemap": true,
