--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@calculemus/abt-lambda",
-    "version": "0.0.3",
+    "version": "0.0.5",
     "description": "Using @calculemus/abt to interpret lambda-calculus",
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -20,11 +20,12 @@
         "@calculemus/abt": "^0.1.3",
         "immutable": "^3.8.2",
         "moo": "^0.4.3",
-        "nearley": "^2.13.0"
+        "nearley": "^2.13.0",
+        "request": "^2.85.0"
     },
     "devDependencies": {
         "@types/chai": "^4.1.2",
-        "@types/mocha": "^2.2.48",
+        "@types/mocha": "^5.2.0",
         "@types/moo": "^0.4.0",
         "@types/nearley": "^2.11.0",
         "@types/node": "^9.4.7",
@@ -34,14 +35,23 @@
         "mocha-lcov-reporter": "^1.3.0",
         "nyc": "^11.6.0",
         "prettier": "^1.11.1",
-        "ts-node": "^5.0.1",
+        "ts-node": "^6.0.2",
         "typescript": "^2.7.2"
     },
     "nyc": {
-        "include": ["src/**/*.ts"],
-        "exclude": ["src/**/*.d.ts", "src/**/test/**/*.ts"],
-        "extension": [".ts"],
-        "require": ["ts-node/register"],
+        "include": [
+            "src/**/*.ts"
+        ],
+        "exclude": [
+            "src/**/*.d.ts",
+            "src/**/test/**/*.ts"
+        ],
+        "extension": [
+            ".ts"
+        ],
+        "require": [
+            "ts-node/register"
+        ],
         "sourcemap": true,
         "instrument": true
     },
